lemon/app/spring-batch-dashboard/config/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: spring-batch-dashboard
  namespace: spring-batch
spec:
  virtualhost:
    fqdn: spring-batch-dashboard.ik.am
    tls:
      secretName: projectcontour/default-tls
  routes:
  - services:
    - name: spring-batch-dashboard
      port: 80
    loadBalancerPolicy:
      strategy: Cookie
